@@ -22,7 +22,7 @@ Things still needing to be done for the BETA release:
 	webgli:
 		Restrict portage snapshot if doing dynamic stage3
 		default the snapshot uri to the cdrom one.
-
+		load values for client-configuration
 Things to put into a later version:
 	
 Future feature requests:
