@@ -50,7 +50,7 @@
     <td>Debug (verbose) mode</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Wizard vs. Menu</td>
@@ -62,7 +62,7 @@
     <td>Skip CC networking if connection alive</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME turn back on</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>CC proxies</td>
@@ -92,13 +92,13 @@
     <td>Portage snapshot defaults to CD</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="good">FIXME NONE</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>make.conf edit CFLAGS if dynamic</td>
-    <td class="good">No</td>
+    <td class="bad">FIXME No</td>
     <td class="good">Yes, doesn't hurt anything</td>
-    <td class="bad">FIXME can edit everything BAD</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>DistCC Support</td>
@@ -194,7 +194,7 @@
     <td>Manual extra packages</td>
     <td class="good">Yes</td>
     <td class="good">Yes</td>
-    <td class="bad">FIXME NO, also needs Save button</td>
+    <td class="good">Yes</td>
   </tr>
   <tr>
     <td>Choose user groups from a list</td>
