@@ -1,10 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.507 2005/12/02 04:30:38 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.508 2005/12/03 22:10:42 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
+  3 Dec 2005; Preston Cody <codeman@gentoo.org>
+  webgli: make.conf disabling fixes for dynamic_stage3
+  fixed portage snapshot browse popup
+  all changes tested.
+  webgli: add debug mode to CC screen. the screen still needs lots of work.
+  
   1 Dec 2005; Preston Cody <codeman@gentoo.org>
   added debug mode question to gli-dialog
   added CC proxies to CC networking for gli-dialog
